begin container fix horizontal scroll

--- a/src/styles/Port.scss
+++ b/src/styles/Port.scss
@@ -52,9 +52,14 @@ p {
   border-style: solid;
   width: 10rem;
   color: $boldBlue;
-  position: absolute;
-  top: 1rem;
-  left: 1rem;
+  top: 0.5rem;
+  right:0.5rem;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  // transform: translate(4%, 1vh);
+  position: -webkit-sticky;
+  position: sticky;
+  box-shadow: 0px 5px 15px rgba(0,0,0.0,0.20);
   p {
     font-size: 1.2rem;
     text-align: center;
@@ -81,8 +86,29 @@ p {
   }
 }
 
-.new-page {
-  width: 100vw;
-  height:100vh;
-  // background-color: $softPink;
+.reg-page {
+  max-width: 100vw;
+  min-height:100vh;
+}
+.large-page{
+  max-width: 200vw;
+  min-height:100vh; 
+}
+
+.grid-container{
+  height: 200vh;
+  max-width: 100vw;
+  display: grid;
+  grid-gap: 1rem;
+  grid-template-columns: auto auto;
+  background-color: #2196F3;
+  padding: 0px;
+  .grid-item{
+    height:30%;
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid rgba(0, 0, 0, 0.8);
+    padding: 20px;
+    font-size: 30px;
+    text-align: center;
+  }
 }
